--- a/intros/003 - Gambling From the Inside.html
+++ b/intros/003 - Gambling From the Inside.html
@@ -211,7 +211,7 @@ body {
         fundamental nos planos de expansão do Vigo Lonay e
         da Black Sun. Após desativarem os escudos e derrotar 
         a resistência local, o grupo é parte de um 
-        jogo mortal no alto cículo do cartel.
+        jogo mortal no alto círculo do cartel.
       </p>
 
       <p>
