--- a/intros/004.html
+++ b/intros/004.html
@@ -211,11 +211,11 @@ body {
       </p>
 
       <p>
-        Sem que os heróis tivessem conhecimento, o astromech capturado do transporte rebelde possuia os códigos para liberação da prisoneira. Livre, Diala Pasil, procura uma forma de escapar da estação espacial. Em uma situação delicada, nosso heróis tentam localizá-la antes que Lonay e o Black Sun compreendam a farsa. A Twi'lek, porém, desaparece.
+        Sem que os heróis tivessem conhecimento, o astromech capturado do transporte rebelde possuia os códigos para liberação da prisoneira. Livre, Diala Pasil, procura uma forma de escapar da estação espacial enquanto todos tentam localizá-la antes que Lonay e o Black Sun compreendam a farsa. A Twi'lek, porém, desaparece.
       </p>
 
       <p>
-        Enquanto isso, sem perder tempo, Lonay mobiliza uma operação em solo para apoiar as pesquisas de Fon Uhyn. O Ithorian faz apenas uma exigência: que a missão seja liderada por seus confíaveis salvadores...
+        Sem hesitar, Lonay mobiliza uma operação em solo para apoiar as pesquisas de Fon Uhyn. O Ithorian faz apenas uma exigência: que a missão seja liderada por seus confíaveis salvadores...
       </p>
       </div>
   </section>
