--- a/intros/004.html
+++ b/intros/004.html
@@ -207,15 +207,15 @@ body {
         </center>
       </p>
       <p>
-        Sucesso! Nossos heróis resgatam o xenobiólogo Fon Uhyn e retornam aos domínios do Vigo Lonay ainda de posse da prisoneira. Acreditando ter despistado o grupo de piratas de Hondo Onaka, bem como o caçador de recompensas Cad Bane, os heróis mantém os detalhes em sigilo e gozam mais uma vez das graças do Black Sun.
+        Sucesso! Nossos heróis resgatam o xenobiólogo Fon Uhyn e retornam aos domínios do Vigo Lonay ainda de posse da prisoneira. Acreditando ter despistado o grupo de piratas de Hondo Onaka e o caçador de recompensas Cad Bane, os heróis mantém os detalhes em sigilo e gozam mais uma vez das graças do Black Sun.
       </p>
 
       <p>
-        Sem que os heróis tivessem conhecimento, o astromech capturado do transporte rebelde possuia os códigos para liberação da prisoneira. Livre, Diala Pasil, procura uma forma de escapar da estação espacial enquanto todos tentam localizá-la antes que Lonay e o Black Sun compreendam a farsa. A Twi'lek, porém, desaparece.
+        O astromech capturado do transporte rebelde, porém, possuia os códigos para liberação da prisoneira. Livre, Diala Pasil, procura uma forma de escapar da estação espacial. Em uma situação delicada, nossos heróis tentam localizá-la antes que Lonay e o Black Sun compreendam a farsa. 
       </p>
 
       <p>
-        Sem hesitar, Lonay mobiliza uma operação em solo para apoiar as pesquisas de Fon Uhyn. O Ithorian faz apenas uma exigência: que a missão seja liderada por seus confíaveis salvadores...
+        Enquanto isso, sem perder tempo, Lonay mobiliza uma operação em solo para apoiar as pesquisas de Fon Uhyn. O Ithorian faz apenas uma exigência: que a missão seja liderada por seus confíaveis salvadores...
       </p>
       </div>
   </section>
